# Neko-Void

./: .gitignore  .gitmodules  README.md  backgrounds.xml
Neko-Wizard/: INSTRUCCIONES  meson.build  test_x11  test_x11.c
Neko-Wizard/data/: style.css
Neko-Wizard/src/: app_card.c  app_card.h  apps_manager.c  apps_manager.h  installer.c  installer.h  main.c  window.c  window.h
live-maker/: OLDOLD  VOIDJW-LEER.txt  installer.sh  make-nolibre-xfce.sh  make-nolibre.sh  make-nvidia580.sh  make-rolling-libre.sh  make-rolling-xorg.sh  make-xlibre.sh  make.sh  mate-monitor.c  mate_monitor  mklive.sh
live-maker/includedir/etc/X11/xinit/: xinitrc
live-maker/includedir/etc/default/: grub
live-maker/includedir/etc/lightdm/: lightdm.conf
live-maker/includedir/etc/runit/: leeme
live-maker/includedir/etc/xbps.d/: 00-repository-main.conf  10-neko-wizard.conf  10-repository-multilib-nonfree.conf  10-repository-multilib.conf  10-repository-nonfree.conf
live-maker/includedir/etc/xdg/autostart/: mate-notification-daemon.desktop  mate-settings-daemon.desktop  polkit-mate-authentication-agent-1.desktop  user-dirs-update-gtk.desktop
live-maker/includedir/home/: .profile
live-maker/includedir/home/anon/: .gtkrc-2.0  instalar.desktop
live-maker/includedir/home/anon/.setup/: downloader
live-maker/includedir/usr/share/neko/: neko-store
live-maker/xfce-dir/etc/lightdm/: lightdm-gtk-greeter.conf  lightdm.conf
live-maker/xfce-dir/etc/xbps.d/: 1-repository-neko.conf  10-repository-multilib-nonfree.conf
live-maker/xfce-dir/home/: .profile
wallpapers/: README.md
(+63 files in other folders)
